trustfall_core/src/resources/test_data/parse_errors/duplicate_edge_parameter.parse-error.ron
Err(DuplicatedEdgeParameter("max", "Number", Pos(
  line: 3,
  column: 25,
)))
